app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

@import "font-awesome-sprockets";
@import "font-awesome";


h1 img.avatar {
	-webkit-filter: drop-shadow(0px 5px 5px #222);
	filter: drop-shadow(5px 5px 5px #222);
}
.resume ul li {
        margin-left:25px;
}

/* Bootstrap Modifications */
.navbar {
        border:none;
        border-radius:0;
        margin-bottom:0;
}

.navbar-inverse {
        /*background-color:#b3844d;*/ /*Stick with black for now*/
}

.center {
        text-align:center;
}

.navbar-logo {
        color:#FFFFFF;
}

.navbar-logo:hover {
        color:#FFFFFF;
        text-decoration:none;
}

ul.navbar-nav li a {
        color:#FFFFFF !important;
}

#logo {
        float:left;
        margin-right:10px;
        font-size:1.7em;
        color:#FFFFFF;
        padding-top:9px;
        font-weight:bold;
}

#logo:hover {
        text-decoration:none;
}

.jumbotron {
        margin-top:0;
        margin-bottom:0;
        /*height:250px;*/
        color:#FFFFFF;
        /*background-image:image-url("background.jpg");
        background-position:0% 25%;
        background-size: cover;
        background-repeat:no-repeat;*/
	background-color:#428bca;
	border-bottom:15px solid #DB8A11;
}

.jumbotron h1, .jumbotron h2 {
	text-shadow: rgba(0,0,0,0.5) 5px 5px 5px;
}

.jumbotron h2 {
	font-weight:normal;
}

/* Elastic Grid Portfolio JQuery Plugin Custom Styles */
#elastic_grid ul li a img {
	border:5px solid #CCCCCC;
}

